# preproc-mri

./: .gitattributes  .gitignore  CAMP.Rproj  DESCRIPTION  ENV_VARS.md  LICENSE  LICENSE.md  NAMESPACE  README.md  README_PY.md  convert.sh  perform_heudiconv.R  perform_mriqc.R  pyproject.toml  pytest.ini  requirements.txt
R/: clean-json.R  common.R  constants.R  execute_jobs.R  extract_todo.R  filter_subjects.R  fmriprep.R  heudiconv.R  mriqc.R  parse_arguments.R  prepare_jobs.R  system_with_env.R  utils-fmriprep.R  utils-heudiconv.R  utils-mriqc.R  utils-preprocess.R  utils.R  validate_data_file_sum.R  workflows.R  xcpd.R  zzz.R
bids_db/: .gitignore  init.py
code/: heuristic.py
config/: xcpd.yml
man/: commit.Rd  execute_jobs.Rd  extract_todo.Rd  parse_arguments.Rd  prepare_jobs.Rd  validate_data_file_sum.Rd
preproc/: __init__.py  cli.py  constants.py  env.py  fmriprep.py  heudiconv.py  logutil.py  mriqc.py  runner.py  utils.py  workflows.py  xcpd.py
preprocess/: perform.R  perform_fmriprep.R  perform_heudiconv.R  perform_mriqc.R  perform_xcpd.R  resolve_rescan.R
scripts/: check_fmri_job_status.R  fix_sourcedata_names.R  perform_fmriprep.py  perform_heudiconv.py  perform_mriqc.py  perform_xcpd.py  preproc_run.py
sourcedata/: .gitignore  tjnu-scanner.csv
template/: exec_fmriprep.sh  exec_heudiconv.sh  exec_mriqc.sh  exec_xcpd.sh  fmriprep.tmpl.qsub  format_subject.py  fsl_sub_mriqc.sh  heudiconv.tmpl.qsub  heuristic.py  mriqc.tmpl.qsub
tests/: test_cli.py  test_runner.py  test_template.py  test_utils.py  test_validate_data_file_sum.py
(+22 files in other folders)
